<resources>
    <string name="app_name">MoneyControl</string>
    <string name="add_transaction">Добавяне на движение</string>
    <string name="date">Дата</string>
    <string name="category">Категория</string>
    <string name="subcategory">Подкатегория</string>
    <string name="amount">Сума</string>
    <string name="description">Описание</string>
    <string name="add">Добавяне</string>
    <string name="no_categories">Няма категории</string>
    <string name="choose_category">Избери категория</string>
    <string name="new_category">Нова категория</string>
    <string name="cancel">Отхвърли</string>
    <string name="save">Запази</string>
    <string name="please_type_name">Моля, въведете име на категория!</string>
    <string name="today">Днес</string>
    <string name="yesterday">Вчера</string>
    <string name="successful_transaction_added">Успешно е добавено ново движение</string>
    <string name="credit">Приход</string>
    <string name="debit">Разход</string>
    <string name="total">Общо:</string>
    <string name="last_month">Последен месец:</string>
    <string name="select_subcategory">Избери подкатегория</string>
    <string name="search">Търси</string>
    <string name="input_password">Въведи парола</string>
    <string name="confirm_password">Потвърди паролата</string>
    <string name="choose_password">Избери парола</string>
    <string name="passwords_are_not_equal">Паролите не са еднакви!</string>
    <string name="login">Вход</string>
    <string name="wrong_password">Грешна парола</string>
    <string name="fingerprint_not_recognized">Пръстовият отпечатък не е разпознат. Опитайте отново.</string>
    <string name="fingerprint_recognized">Пръстов отпечатък разпознат.</string>
    <string name="device_settings_changed">Настройките на Вашето устройство са променени.</string>
    <string name="confirm_identity_again">Моля, потвърдете пръстовия си отпечатък отново, като го поставите на четеца.</string>
    <string name="fingerprint">Пръстов отпечатък</string>
    <string name="confirm_fingerprint_to_continue">Потвърдете пръстовия си отпечатък, за да продължите</string>
    <string name="touch_sensor">Докоснете четеца </string>
    <string name="use_login_code">Използвайте код за достъп</string>
    <string name="fingerprint_login">Вход с пръстов отпечатък</string>
    <string name="use_your_fingerprint_for_faster">Използвайте пръстовия си отпечатък за по-бърз и лесен вход. Потвърдете, за да продължите.</string>
    <string name="settings">Настройки</string>
    <string name="change_password">Смяна на парола</string>
    <string name="link_fingerprint">Използвай пръстов отпечатък при вход</string>
    <string name="password_is_changed">Паролата е сменена успешно.</string>
    <string name="enter_old_password">Въведи парола</string>
    <string name="enter_new_password">Въведи нова парола</string>
    <string name="confirm_new_password">Потвърди новата парола</string>
    <string name="start_date">Начална дата</string>
    <string name="end_date">Крайна дата</string>
    <string name="start_amount">Начална сума</string>
    <string name="end_amount">Крайна сума</string>
    <string name="reset">ИЗЧИСТИ</string>
    <string name="apply">Приложи</string>
    <string name="input_date">Въведи дата</string>
    <string name="select_category">Избери категория</string>
    <string name="enter_amount">Въведи сума</string>
    <string name="enter_description">Въведи описание</string>
</resources>