<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:padding         ="16dp"
    android:orientation     ="vertical">

    <TextView
        android:id              ="@+id/dialog_title_txt"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:text            ="@string/new_category"
        android:textSize        ="18sp"/>

    <EditText
        android:id              ="@+id/category_edt"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType       ="text"
        android:hint            ="@string/category"/>

    <LinearLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation     ="horizontal"
        android:gravity         ="end">

        <Button
            style                   ="?attr/buttonBarButtonStyle"
            android:id              ="@+id/cancel_btn"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/cancel"/>

        <Button
            style                   ="?attr/buttonBarButtonStyle"
            android:id              ="@+id/save_btn"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/save"/>

    </LinearLayout>

</LinearLayout>