<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.AddTransactionActivity">

    <LinearLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:orientation     ="vertical">

        <include layout="@layout/toolbar_layout"/>

        <android.support.design.widget.TextInputLayout
            android:id                  ="@+id/date_layout"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginTop    ="10dp"
            android:layout_marginStart  ="16dp"
            android:layout_marginEnd    ="16dp">

            <com.example.moneycontrol.customClasses.CustomEditText
                android:id                  ="@+id/date_edt"
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:hint                ="@string/date"
                android:focusable           ="false"
                android:inputType           ="date"
                app:input_text_layout_id    ="@+id/date_layout"
                app:error_text              ="@string/input_date"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id                  ="@+id/category_layout"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginTop    ="10dp"
            android:layout_marginStart  ="16dp"
            android:layout_marginEnd    ="16dp">

            <com.example.moneycontrol.customClasses.CustomEditText
                android:id                  ="@+id/category_edt"
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:focusable           ="false"
                android:hint                ="@string/category"
                android:inputType           ="text"
                app:input_text_layout_id    ="@+id/category_layout"
                app:error_text              ="@string/select_category"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id                  ="@+id/subcategory_la"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginTop    ="10dp"
            android:layout_marginStart  ="16dp"
            android:layout_marginEnd    ="16dp">

            <com.example.moneycontrol.customClasses.CustomEditText
                android:id                  ="@+id/subcategory_edt"
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:focusable           ="false"
                android:hint                ="@string/subcategory"
                android:inputType           ="text"
                app:input_text_layout_id    ="@+id/category_layout"
                app:error_text              ="@string/select_category"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:layout_gravity      ="center_vertical"
            android:layout_marginTop    ="10dp"
            android:layout_marginStart  ="16dp"
            android:layout_marginEnd    ="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width        ="wrap_content"
                android:layout_height       ="wrap_content">

                <com.example.moneycontrol.customClasses.CustomEditText
                    android:layout_width        ="wrap_content"
                    android:layout_height       ="wrap_content"
                    android:layout_marginEnd    ="5dp"
                    android:inputType           ="text"
                    android:text                ="BGN"
                    android:focusable           ="false"
                    android:clickable           ="false"
                    android:gravity             ="center_vertical" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id                  ="@+id/amount_layout"
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:layout_marginStart  ="5dp">

                <com.example.moneycontrol.customClasses.CustomEditText
                    android:id                  ="@+id/amount_edt"
                    android:layout_width        ="match_parent"
                    android:layout_height       ="wrap_content"
                    android:hint                ="@string/amount"
                    android:inputType           ="numberDecimal"
                    app:input_text_layout_id    ="@+id/amount_layout"
                    app:error_text              ="@string/enter_amount"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id                  ="@+id/description_layout"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginTop    ="10dp"
            android:layout_marginStart  ="16dp"
            android:layout_marginEnd    ="16dp">

            <com.example.moneycontrol.customClasses.CustomEditText
                android:id                  ="@+id/description_edt"
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:hint                ="@string/description"
                android:inputType           ="text"
                app:input_text_layout_id    ="@+id/description_layout"
                app:error_text              ="@string/enter_description"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginStart  ="16dp"
            android:layout_marginEnd    ="16dp"
            android:layout_marginTop    ="10dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id              ="@+id/debit_checkbox"
                android:layout_width    ="wrap_content"
                android:layout_height   ="wrap_content"
                android:text            ="@string/debit"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id                  ="@+id/credit_checkbox"
                android:layout_width        ="wrap_content"
                android:layout_height       ="wrap_content"
                android:layout_marginStart  ="15dp"
                android:text                ="@string/credit"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id                          ="@+id/save_btn"
        android:layout_width                ="match_parent"
        android:layout_height               ="40dp"
        android:layout_alignParentBottom    ="true"
        android:layout_marginBottom         ="15dp"
        android:layout_marginStart          ="30dp"
        android:layout_marginEnd            ="30dp"
        android:background                  ="@color/colorPrimary"
        android:text                        ="@string/add"
        android:textColor                   ="@color/main_white"/>

</RelativeLayout>