<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    android:orientation     ="vertical"
    android:gravity         ="center_vertical"
    android:padding         ="16dp">

    <android.support.design.widget.TextInputLayout
        android:id                      ="@+id/enter_old_passcode_layout"
        android:layout_width            ="match_parent"
        android:layout_height           ="wrap_content">

        <com.example.moneycontrol.customClasses.CustomEditText
            android:id              ="@+id/enter_old_passcode_edt"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:hint            ="@string/enter_old_password"
            android:inputType       ="textPassword"
            app:input_text_layout_id="@id/enter_old_passcode_layout"
            app:error_text          ="@string/enter_old_password"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id                      ="@+id/enter_new_passcode_layout"
        android:layout_width            ="match_parent"
        android:layout_height           ="wrap_content">

        <com.example.moneycontrol.customClasses.CustomEditText
            android:id              ="@+id/enter_new_passcode_edt"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:hint            ="@string/enter_new_password"
            android:inputType       ="textPassword"
            app:input_text_layout_id="@id/enter_new_passcode_layout"
            app:error_text          ="@string/enter_new_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id                      ="@+id/enter_confirm_passcode_layout"
        android:layout_width            ="match_parent"
        android:layout_height           ="wrap_content">

        <com.example.moneycontrol.customClasses.CustomEditText
            android:id              ="@+id/enter_confirm_passcode_edt"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:hint            ="@string/confirm_new_password"
            android:inputType       ="textPassword"
            app:input_text_layout_id="@id/enter_confirm_passcode_layout"
            app:error_text          ="@string/confirm_new_password"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:orientation         ="horizontal"
        android:gravity             ="end|center_vertical"
        android:layout_marginTop    ="24dp">

        <Button
            android:id                          ="@+id/cancel_btn"
            android:layout_width                ="wrap_content"
            android:layout_height               ="wrap_content"
            android:text                        ="@string/cancel"
            style                               ="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id                          ="@+id/save_btn"
            android:layout_width                ="wrap_content"
            android:layout_height               ="wrap_content"
            android:text                        ="@string/save"
            android:textColor                   ="@color/colorPrimary"
            style                               ="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</LinearLayout>