<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".activities.ChoosePasscodeActivity">

    <TextView
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity         ="center_horizontal"
        android:textSize        ="30sp"
        android:textStyle       ="bold"
        android:text            ="@string/choose_password"/>

    <LinearLayout
        android:layout_width            ="match_parent"
        android:layout_height           ="wrap_content"
        android:layout_centerInParent   ="true"
        android:orientation             ="vertical">

        <android.support.design.widget.TextInputLayout
            android:id                  ="@+id/enter_passcode_layout"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content">

            <com.example.moneycontrol.customClasses.CustomEditText
                android:id              ="@+id/enter_passcode_edt"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:hint            ="@string/input_password"
                android:inputType       ="textPassword"
                app:input_text_layout_id="@id/enter_passcode_layout"
                app:error_text          ="@string/input_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id                  ="@+id/confirm_passcode_layout"
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content">

            <com.example.moneycontrol.customClasses.CustomEditText
                android:id              ="@+id/confirm_passcode_edt"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:hint            ="@string/confirm_password"
                android:inputType       ="textPassword"
                app:input_text_layout_id="@id/confirm_passcode_layout"
                app:error_text          ="@string/confirm_password"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id                          ="@+id/save_btn"
        android:layout_width                ="match_parent"
        android:layout_height               ="wrap_content"
        android:layout_alignParentBottom    ="true"
        android:layout_marginBottom         ="15dp"
        android:background                  ="@color/colorPrimary"
        android:text                        ="@string/save"
        android:textColor                   ="@color/main_white"/>

</RelativeLayout>